--- a/JS_Clock/index.html
+++ b/JS_Clock/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang=" ">
+<html>
 
 <head>
-    <meta charset="UTF-8">
     <title>Something</title>
     <link rel="stylesheet" href="index.css" />
 </head>
@@ -11,7 +10,12 @@
     <div class="js-clock">
         <h1>00:00</h1>
     </div>
+    <form class="js-form form">
+        <input type="text" placeholder="What is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
     <script src="clock.js"></script>
+    <script src="gretting.js"></script>
 </body>
 
 </html>
